# BBTools3D

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindAssimp.cmake  FindLasLib.cmake
src/: TaskManager.cpp  TaskManager.h  main.cpp  mesh.h
src/Converter/: Converter.cpp  Converter.h
src/Core/: Base3DData.cpp  Base3DData.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PointCloud.cpp  PointCloud.h  StandardModel.cpp  StandardModel.h  Texture.cpp  Texture.h  mesh.h
src/DataLoader/: DataLoader.cpp  DataLoader.h
src/Processor/: Processor.cpp  Processor.h
src/utils/: BoundingVolume.cpp  BoundingVolume.h  FileSystemUtil.cpp  FileSystemUtil.h  Image.cpp  Image.h  Log.cpp  Log.h  MathUtil.cpp  MathUtil.h  Point2.h  Point2.inl  Point3.h  Pyramid.cpp  Pyramid.h  QuadTreeIndex.cpp  QuadTreeIndex.h  SpatialIndex.cpp  SpatialIndex.h  StringConverter.cpp  StringConverter.h  StringUtil.cpp  StringUtil.h  Transformation.cpp  Transformation.h  Types.h  stdafx.h
testdata/las/dongda1lu/las(#1-#98)/: dd_1-12_Drainage_thread.las  dd_1-12_bridges.las  dd_1-12_buildings.las  dd_1-12_insulator_string.las  dd_1-12_road.las  dd_1-12_scissors_crossing(down).las  dd_1-12_shield_wire.las  dd_1-12_ship&Car.las  dd_1-12_structures.las  dd_1-12_substations.las  dd_1-12_temporary_building.las  dd_12-37_Drainage_thread.las  dd_12-37_buildings.las  dd_12-37_insulator_string.las  dd_12-37_lake.las  dd_12-37_road.las  dd_12-37_scissors_crossing(down).las  dd_12-37_shield_wire.las  dd_12-37_ship&Car.las  dd_12-37_structures.las  dd_12-37_temporary_building.las  dd_37-56_Drainage_thread.las  dd_37-56_buildings.las  dd_37-56_insulator_string.las  dd_37-56_lake.las  dd_37-56_road.las  dd_37-56_scissors_crossing(down).las  dd_37-56_shield_wire.las  dd_37-56_structures.las  dd_37-56_temporary_building.las  dd_56-69_Drainage_thread.las  dd_56-69_buildings.las  dd_56-69_conductor.las  dd_56-69_insulator_string.las  dd_56-69_road.las  dd_56-69_scissors_crossing(down).las  dd_56-69_shield_wire.las  dd_56-69_structures.las  dd_56-69_temporary_building.las  dd_69-89_Drainage_thread.las  (+19 more)
testdata/las/dongda1lu/las(#98-#245)/las/: dd_103-127_Drainage_thread.las  dd_103-127_buildings.las  (+135 more)
third/install/assimp/lib/: IrrXML.lib  assimp-vc140-mt.lib  zlibstatic.lib
third/install/curl/lib/: libcurl_imp.lib
third/install/gdal/include/: cpl_config.h  gdal_version.h
third/install/gdal/lib/: gdal.lib
third/install/geos/include/: geos_c.h
third/install/geos/lib/: geos.lib  geos_c.lib
third/install/googletest/lib/: gtest_main.lib
third/install/lib/: IrrXML.lib  assimp-vc140-mt.lib  zlibstatic.lib
third/install/lib/pkgconfig/: assimp.pc
third/install/sqlite/lib/: sqlite3.lib
third/install/tiff/include/: tiffconf.h
third/install/tiff/lib/: tiff.lib
third/port/sqlite3/: CMakeLists.txt
third/script/: 00_build_all_win.bat
third/script/win/: build_assimp.bat  build_curl.bat  build_gdal.bat  build_geos.bat  build_googletest.bat  build_laslib.bat  build_proj.bat  build_spdlog.bat  build_sqlite.bat  build_tiff.bat
(+34 files in other folders)
